--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "pandas>=1.3.0",
     "pygbif>=0.6.0",
     "pyobis>=1.4.0",
+    "rasterio",
+    "numpy",
 ]
 
 [project.optional-dependencies]
