--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "pandas>=1.3.0",
     "pygbif>=0.6.0",
     "pyobis>=1.4.0",
+    "terratorch>=0.1.3",
     "rasterio",
     "numpy",
 ]
